Add logging pt 2

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,4 +9,6 @@ rand = "*"
 crossterm = "*"
 better_term = "*"
 pbars = "*"
-tui = { version="0.17.0", default-features=true }
+tui = { version = "0.17.0", default-features = true }
+log = "*"
+tui-logger = { path = "./tui-logger" }
